# nlp_course_hw

./: .gitignore  README.md  pyproject.toml
task1/: parser.py
task1/extractors/: date_extractor.py  extractor.py  location_extractor.py  name_extractor.py
task2/: classifier.py  docs_classify.py  dummy_classify.py  vectorizers.py  word2vec.py
task3/: task3.ipynb
utils/: files_utils.py  pymorphy_fix.py
